content: rewrite 40 more learn files with detailed beginner-friendly content
- Algorithms 07-12 (complete), Database 07-09, Docker 08-12 (complete)
- Java 11-17, K8s 02-11, Network 01-06, System Design 01-03

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>